# GraphQL_Task

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
chat/: admin.py  apps.py  models.py  schema.py
chat/migrations/: 0001_initial.py
chat/tests/chat/: test_mutations.py  test_queries.py
core/: celery.py  configs.py  schema.py  settings.py  urls.py
subscriptions/: admin.py  apps.py  models.py  schema.py  services.py
subscriptions/migrations/: 0001_initial.py
subscriptions/tests/subscriptions/: test_mutations.py  test_queries.py
users/: admin.py  apps.py  managers.py  models.py  schema.py  services.py  tasks.py  types.py
users/migrations/: 0001_initial.py  0002_emailverificationtoken.py  0003_alter_customuser_is_active.py
users/tests/users/: test_mutations.py  test_queries.py
utils/: apps.py  jwt_utils.py  models.py  validators.py
